--- a/source/examples/advanced/multiple_instances.html
+++ b/source/examples/advanced/multiple_instances.html
@@ -94,9 +94,10 @@
         }
     </style>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js" charset="utf-8"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.4/raphael-min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"
+            charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.2.7/raphael.min.js" charset="utf-8"></script>
     <script src="../../js/jquery.mapael.js" charset="utf-8"></script>
     <script src="../../js/maps/france_departments.js" charset="utf-8"></script>
     <script src="../../js/maps/usa_states.js" charset="utf-8"></script>
@@ -180,7 +181,7 @@
                         latitude: 45.758888888889,
                         longitude: 4.8413888888889,
                         value: 700000,
-                        href: "https://fr.wikipedia.org/wiki/Lyon",
+                        href: "http://fr.wikipedia.org/wiki/Lyon",
                         tooltip: {content: "<span style=\"font-weight:bold;\">City :</span> Lyon"},
                         text: {content: "Lyon"}
                     },
@@ -191,7 +192,7 @@
                         longitude: -1.6808333333333,
                         tooltip: {content: "<span style=\"font-weight:bold;\">City :</span> Rennes"},
                         text: {content: "Rennes"},
-                        href: "https://fr.wikipedia.org/wiki/Rennes"
+                        href: "http://fr.wikipedia.org/wiki/Rennes"
                     }
                 }
             });
