--- a/source/examples/basic/href_areas_plotted_cities.html
+++ b/source/examples/basic/href_areas_plotted_cities.html
@@ -81,10 +81,10 @@
         }
     </style>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"
             charset="utf-8"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.4/raphael-min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.2.7/raphael.min.js" charset="utf-8"></script>
     <script src="../../js/jquery.mapael.js" charset="utf-8"></script>
     <script src="../../js/maps/france_departments.js" charset="utf-8"></script>
     <script src="../../js/maps/world_countries.js" charset="utf-8"></script>
@@ -141,7 +141,7 @@
                     "department-56": {
                         text: {content: "Morbihan", attrs: {"font-size": 10}},
                         tooltip: {content: "Morbihan (56)"},
-                        href: "https://fr.wikipedia.org/wiki/Morbihan"
+                        href: "http://fr.wikipedia.org/wiki/Morbihan"
                     },
                     "department-21": {
                         attrs: {
@@ -150,7 +150,7 @@
                         , attrsHover: {
                             fill: "#a4e100"
                         },
-                        href: "https://fr.wikipedia.org/wiki/C%C3%B4te-d%27Or",
+                        href: "http://fr.wikipedia.org/wiki/C%C3%B4te-d%27Or",
                         target: "_blank"
                     }
                 },
@@ -160,7 +160,7 @@
                     // Image plot
                     'paris': {
                         type: "image",
-                        url: "https://www.neveldo.fr/mapael/assets/img/marker.png",
+                        url: "http://www.neveldo.fr/mapael/assets/img/marker.png",
                         width: 12,
                         height: 40,
                         latitude: 48.86,
@@ -171,7 +171,7 @@
                         attrsHover: {
                             transform: "s1.5"
                         },
-                        href: "https://fr.wikipedia.org/wiki/Paris",
+                        href: "http://fr.wikipedia.org/wiki/Paris",
                         target: "_blank"
                     },
                     // Circle plot
@@ -183,7 +183,7 @@
                         value: 700000,
                         tooltip: {content: "<span style=\"font-weight:bold;\">City :</span> Lyon"},
                         text: {content: "Lyon"},
-                        href: "https://fr.wikipedia.org/wiki/Lyon"
+                        href: "http://fr.wikipedia.org/wiki/Lyon"
                     },
                     // Square plot
                     'rennes': {
@@ -193,7 +193,7 @@
                         longitude: -1.6808333333333,
                         tooltip: {content: "<span style=\"font-weight:bold;\">City :</span> Rennes"},
                         text: {content: "Rennes"},
-                        href: "https://fr.wikipedia.org/wiki/Rennes"
+                        href: "http://fr.wikipedia.org/wiki/Rennes"
                     },
                     // Plot positioned by x and y instead of latitude, longitude
                     'myplot': {
