--- a/source/examples/basic/plotted_cities_areas.html
+++ b/source/examples/basic/plotted_cities_areas.html
@@ -43,10 +43,10 @@
         }
     </style>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"
             charset="utf-8"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.4/raphael-min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.2.7/raphael.min.js" charset="utf-8"></script>
     <script src="../../js/jquery.mapael.js" charset="utf-8"></script>
     <script src="../../js/maps/france_departments.js" charset="utf-8"></script>
     <script src="../../js/maps/world_countries.js" charset="utf-8"></script>
@@ -116,7 +116,7 @@
                     // Image plot
                     'paris': {
                         type: "image",
-                        url: "https://www.neveldo.fr/mapael/assets/img/marker.png",
+                        url: "http://www.neveldo.fr/mapael/assets/img/marker.png",
                         width: 12,
                         height: 40,
                         latitude: 48.86,
@@ -191,7 +191,17 @@
                                 , fill: "#fff"
                             }
                         }
-                    }
+                    },
+                    // Plot positioned by area name of the map
+                    'myplot_with_area_name': {
+                        plotsOn: "department-22",
+                        text: {
+                            content: "Dept. 22"
+                            , position: "bottom"
+                            , attrs: {"font-size": 10, fill: "#004a9b", opacity: 0.6}
+                            , attrsHover: {fill: "#004a9b", opacity: 1}
+                        },
+                    },
                 }
             });
         });
