--- a/source/examples/basic/zoom_features.html
+++ b/source/examples/basic/zoom_features.html
@@ -83,10 +83,10 @@
         }
     </style>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-mousewheel/3.1.13/jquery.mousewheel.min.js"
             charset="utf-8"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.4/raphael-min.js" charset="utf-8"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.2.7/raphael.min.js" charset="utf-8"></script>
     <script src="../../js/jquery.mapael.js" charset="utf-8"></script>
     <script src="../../js/maps/france_departments.js" charset="utf-8"></script>
     <script src="../../js/maps/world_countries.js" charset="utf-8"></script>
@@ -160,7 +160,7 @@
                     // Image plot
                     'paris': {
                         type: "image",
-                        url: "https://www.neveldo.fr/mapael/assets/img/marker.png",
+                        url: "http://www.neveldo.fr/mapael/assets/img/marker.png",
                         width: 12,
                         height: 40,
                         latitude: 48.86,
