Fix JSFiddle post action

--- a/try.html
+++ b/try.html
@@ -191,7 +191,7 @@
                 </div>
 
                 <div style="text-align:right;margin-top:5px;">
-                    <form method="post" action="http://jsfiddle.net/api/post/mootools/1.2/dependencies/more/" target="_blank" id="jsfiddleExport">
+                    <form method="post" action="http://jsfiddle.net/api/post/library/pure/" target="_blank" id="jsfiddleExport">
 
                         <input type="hidden" name="html" value="" />
                         <input type="hidden" name="js" value="" />
