--- a/try.html
+++ b/try.html
@@ -78,7 +78,7 @@
         .mapcontainer {
             height:70vh;
             border:1px solid #ccc;
-            overflow-y:auto;
+            overflow-y:scroll;
         }
 
         #configuration { 
