Update the documentation of hook 'afterUpdate'

--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
         <li>  <strong>areas :</strong> (Object) Drawn areas</li>
         <li>  <strong>plots :</strong> (Object) Drawn plotted points</li>
         <li>  <strong>options :</strong> (Object) Map options</li>
+        <li>  <strong>links :</strong> (Object) Drawn links</li>
     </ul>
 
     <h3>Event afterZoom</h3>
