--- a/source/examples/advanced/dataviz_example.html
+++ b/source/examples/advanced/dataviz_example.html
@@ -15455,7 +15455,8 @@
                     defaultPlot: {
                         text: {
                             attrs: {
-                                fill: "#b4b4b4"
+                                fill: "#b4b4b4",
+                                "font-weight": "normal"
                             },
                             attrsHover: {
                                 fill: "#fff",
