--- a/source/examples/advanced/legend_show_hide.html
+++ b/source/examples/advanced/legend_show_hide.html
@@ -89,7 +89,8 @@
                                 attrs: {
                                     fill: "#2579b5"
                                 },
-                                label: "Between 10 millions and 50 millions inhabitants"
+                                label: "Between 10 millions and 50 millions inhabitants",
+                                clicked: true
                             },
                             {
                                 min: 50000000,
@@ -101,8 +102,8 @@
                         ]
                     },
                     plot: {
-                        title: "Cities population"
-                        , slices: [
+                        title: "Cities population",
+                        slices: [
                             {
                                 max: 500000,
                                 attrs: {
@@ -138,7 +139,8 @@
                                     "stroke-width": 1
                                 },
                                 label: "More than 1 million inhabitants",
-                                size: 30
+                                size: 30,
+                                clicked: true
                             }
                         ]
                     }
