--- a/source/examples/basic/legend_SVG_paths.html
+++ b/source/examples/basic/legend_SVG_paths.html
@@ -81,7 +81,7 @@
         .mapael .zoomOut {
             top: 50px;
         }
-        
+
     </style>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
@@ -124,7 +124,8 @@
                             height: 30,
                             attrs: {
                                 fill: "#8AD12C"
-                            }
+                            },
+                            clicked: true
                         }, {
                             label: "Value 2",
                             sliceValue: "Value 2",
